--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,17 @@
 History
 -------
 
+1.1.0 (2016-11-22)
+~~~~~~~~~~~~~~~~~~
+
+* Change default HTML parser to `lxml.html.HTMLParser <http://lxml.de/api/lxml.html.HTMLParser-class.html>`_,
+  which makes easier to use some HTML specific features
+* Add css2xpath function to translate CSS to XPath
+* Add support for ad-hoc namespaces declarations
+* Add support for XPath variables
+* Documentation improvements and updates
+
+
 1.0.3 (2016-07-29)
 ~~~~~~~~~~~~~~~~~~
 
