--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,11 @@
 History
 -------
 
+1.3.1 (2017-12-28)
+------------------
+
+* Fix artifact uploads to pypi.
+
 1.3.0 (2017-12-28)
 ------------------
 
