--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,15 @@
 History
 -------
 
+1.4.0 (2018-02-08)
+~~~~~~~~~~~~~~~~~~
+
+* ``Selector`` and ``SelectorList`` can't be pickled because
+  pickling/unpickling doesn't work for ``lxml.html.HtmlElement``;
+  parsel now raises TypeError explicitly instead of allowing pickle to
+  silently produce wrong output. This is technically backwards-incompatible
+  if you're using Python < 3.6.
+
 1.3.1 (2017-12-28)
 ~~~~~~~~~~~~~~~~~~
 
