Update Parsel 1.5.2 in the NEWS file

--- a/NEWS
+++ b/NEWS
@@ -3,14 +3,15 @@
 History
 -------
 
-1.5.2 (2019-08-NN)
+1.5.2 (2019-08-09)
 ~~~~~~~~~~~~~~~~~~
 
-*   The value of ``data`` within the printable representation of a selector
-    (``repr(selector)``) now ends in ``...`` when truncated, to make the
-    truncation obvious.
-
-*   Minor documentation improvements.
+* :meth:`Selector.remove_namespaces <parsel.selector.Selector.remove_namespaces>`
+  received a significant performance improvement
+* The value of ``data`` within the printable representation of a selector
+  (``repr(selector)``) now ends in ``...`` when truncated, to make the
+  truncation obvious.
+* Minor documentation improvements.
 
 
 1.5.1 (2018-10-25)
