--- a/NEWS
+++ b/NEWS
@@ -9,7 +9,10 @@ History
 * Add support for JMESPath: you can now create a selector for a JSON document
   and call ``Selector.jmespath()``. See :ref:`the documentation
   <topics-selectors>` for more information and examples.
-* Memory usage improvements
+* Selectors can now be constructed from ``bytes`` (using the ``body`` and
+  ``encoding`` arguments) instead of ``str`` (using the ``text`` argument), so
+  that there is no internal conversion from ``str`` to ``bytes`` and the memory
+  usage is lower.
 * Typing improvements
 * The ``pkg_resources`` module (which was absent from the requirements) is no
   longer used
