--- a/NEWS
+++ b/NEWS
@@ -7,8 +7,8 @@ History
 ~~~~~~~~~~~~~~~~~~
 
 * Add support for JMESPath: you can now create a selector for a JSON document
-  and call ``Selector.jmespath()``. See :ref:`the documentation
-  <topics-selectors>` for more information and examples.
+  and call ``Selector.jmespath()``. See `the documentation`_ for more
+  information and examples.
 * Selectors can now be constructed from ``bytes`` (using the ``body`` and
   ``encoding`` arguments) instead of ``str`` (using the ``text`` argument), so
   that there is no internal conversion from ``str`` to ``bytes`` and the memory
@@ -21,6 +21,8 @@ History
 
   * ``jmespath``
   * ``typing_extensions`` (on Python 3.7)
+
+ .. _the documentation: https://parsel.readthedocs.io/en/latest/usage.html
 
 1.7.0 (2022-11-01)
 ~~~~~~~~~~~~~~~~~~
