--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,12 @@
 History
 -------
 
+1.8.1 (2023-04-18)
+~~~~~~~~~~~~~~~~~~
+
+* Remove a Sphinx reference from NEWS to fix the PyPI description
+* Add a ``twine check`` CI check to detect such problems
+
 1.8.0 (2023-04-18)
 ~~~~~~~~~~~~~~~~~~
 
