--- a/NEWS
+++ b/NEWS
@@ -10,7 +10,7 @@ History
   1.8.0 but that wasn't properly recorded)
 * Removed support for Python 3.7
 * Added support for Python 3.12 and PyPy 3.10
-* Fixed an exception when calling ``__str__`` or `__repr__`` on some JSON
+* Fixed an exception when calling ``__str__`` or ``__repr__`` on some JSON
   selectors
 * Code formatted with ``black``
 * CI fixes and improvements
