--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,12 @@
 History
 -------
 
+1.9.1 (YYYY-MM-DD)
+~~~~~~~~~~~~~~~~~~
+
+* Removed the dependency on ``pytest-runner``.
+* Removed the obsolete ``Makefile``.
+
 1.9.0 (2024-03-14)
 ~~~~~~~~~~~~~~~~~~
 
