--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,26 @@
 History
 -------
 
+1.11.0 (unreleased)
+~~~~~~~~~~~~~~~~~~~
+
+* Removed support for Python 3.9 and PyPy 3.10.
+* Added support for Python 3.14 and PyPy 3.11.
+* The following dependencies now have a minimum supported version:
+
+  * ``lxml >= 5.1.0``
+  * ``packaging >= 23.0``
+  * ``jmespath >= 1.0.0``
+
+* Removed ``Selector.remove()`` and ``SelectorList.remove()``, deprecated in
+  1.7.0.
+* The ``Selector()`` constructor now accepts ``bytearray`` values for the
+  ``body`` argument in addition to ``bytes``.
+* ``attrib`` and ``remove_namespaces()`` no longer fail with unhandled
+  exceptions on JSON selectors.
+* Switched the build system to ``hatchling``.
+* CI fixes and improvements.
+
 1.10.0 (2024-12-16)
 ~~~~~~~~~~~~~~~~~~~
 
